basalt/src/input/snapshots/basalt_tui__input__tests__default.snap
---
source: basalt/src/input/mod.rs
expression: terminal.backend()
---
"                              "
"                              "
"                              "
"                              "
"                              "
