basalt/src/input/snapshots/basalt_tui__input__tests__text_scrolled.snap
---
source: basalt/src/input/mod.rs
expression: terminal.backend()
---
"╭ Input: ────────────────────╮"
"│ rolling when rendered in t │"
"╰ Editing ───────────────────╯"
"                              "
"                              "
