basalt/src/input/snapshots/basalt_tui__input__tests__text_unicode.snap
---
source: basalt/src/input/mod.rs
expression: terminal.backend()
---
"╭ Input: ────────────────────╮"
"│ café 世界 🎉               │" Hidden by multi-width symbols: [(8, " "), (10, " "), (13, " ")]
"╰ Editing ───────────────────╯"
"                              "
"                              "
