basalt/src/input/snapshots/basalt_tui__input__tests__text_with_leading_spaces.snap
---
source: basalt/src/input/mod.rs
expression: terminal.backend()
---
"╭ Input: ────────────────────╮"
"│    indented text           │"
"╰ Editing ───────────────────╯"
"                              "
"                              "
