basalt/src/input/snapshots/basalt_tui__input__tests__text_with_multiple_spaces.snap
---
source: basalt/src/input/mod.rs
expression: terminal.backend()
---
"╭ Input: ────────────────────╮"
"│ hello   world   test       │"
"╰ Editing ───────────────────╯"
"                              "
"                              "
