basalt/src/input/snapshots/basalt_tui__input__tests__with_value_next_row.snap
---
source: basalt/src/input/mod.rs
expression: terminal.backend()
---
"                              "
"╭ Input: ────────────────────╮"
"│ Hello world                │"
"╰ Editing ───────────────────╯"
"                              "
